# tfx

./: .gitignore  Bitmap.cpp  Bitmap.h  BitmapRenderer.cpp  BitmapRenderer.h  CMakeLists.txt  ErrorDialog.cpp  ErrorDialog.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  GraphicsClass.cpp  GraphicsClass.h  Input.cpp  Input.h  InputClass.cpp  InputClass.h  README.md  Renderer.cpp  Renderer.h  Settings.h  System.cpp  System.h  SystemClass.cpp  SystemClass.h  Texture.cpp  Texture.h  ToDo.txt  Vulkan.cpp  Vulkan.h  VulkanClass.cpp  VulkanClass.h  main.cpp
Assets/Shaders/: fullscreen.frag  fullscreen.frag.spv  fullscreen.vert  fullscreen.vert.spv  post.frag  post_frag.spv  scene.vert  scene_vert.spv  triangle.frag  triangle.frag.spv
Assets/Shaders/SMAA/: smaa_blend.frag  smaa_blend.vert  smaa_blend_frag.spv  smaa_blend_vert.spv  smaa_edge.frag  smaa_edge.vert  smaa_edge_frag.spv  smaa_edge_vert.spv  smaa_settings.h  smaa_weights.frag  smaa_weights.vert  smaa_weights_frag.spv  smaa_weights_vert.spv
Assets/Shaders/SSAA/: ssaa.frag  ssaa.vert  ssaa_frag.spv
Engine/: pch.h
Engine/Core/: Application.cpp  Application.h  ApplicationDesc.h  Display.cpp  Display.h  Timer.cpp  Timer.h  Window.cpp  Window.h
Engine/Core/Error/: ErrorDialog.cpp
Engine/Debug/: ErrorDialog.cpp  ErrorDialog.h
Engine/Graphics/: Graphics.cpp  Graphics.h
Engine/Graphics/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
Engine/Graphics/Vulkan/Core/: VulkanCommands.cpp  VulkanCommands.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanQueues.cpp  VulkanQueues.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSync.cpp  VulkanSync.h  VulkanValidation.cpp  VulkanValidation.h
Engine/Graphics/Vulkan/PostProcessPass/: VulkanPostRenderPass.cpp  VulkanPostRenderPass.h  VulkanPostResources.cpp  VulkanPostResources.h  VulkanSMAARenderPass.cpp  VulkanSMAARenderPass.h  VulkanSSAARenderPass.cpp  VulkanSSAARenderPass.h
Engine/Graphics/Vulkan/Resources/: RenderTarget.cpp  RenderTarget.h  VulkanTextureDescriptor.cpp  VulkanTextureDescriptor.h
Engine/Graphics/Vulkan/ScenePass/: VulkanScenePipeline.cpp  VulkanScenePipeline.h  VulkanSceneRenderPass.cpp  VulkanSceneRenderPass.h  VulkanSceneResources.cpp  VulkanSceneResources.h
Engine/Graphics/Vulkan/Utils/: VulkanUtils.cpp  VulkanUtils.h
Engine/Input/: Input.cpp  Input.h  InputMapping.cpp  InputMapping.h  KeyCodes.h
Engine/Platform/SDL/: SDLInput.cpp  SDLInput.h
Graphics/: Graphics.cpp  Graphics.h
Graphics/Vulkan/: VulkanCommandBuffers.cpp  VulkanCommandBuffers.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffers.cpp  VulkanFramebuffers.h  VulkanImageViews.cpp  VulkanImageViews.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderTarget.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSampler.cpp  VulkanSampler.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUtils.cpp  VulkanUtils.h  VulkanValidation.cpp  VulkanValidation.h
Graphics/Vulkan/Core/: VulkanSwapchain.cpp  VulkanSwapchain.h
Graphics/Vulkan/Offscreen/: VulkanOffscreenFramebuffers.cpp  VulkanOffscreenFramebuffers.h  VulkanOffscreenPipeline.cpp  VulkanOffscreenPipeline.h  VulkanOffscreenRenderPass.cpp  VulkanOffscreenRenderPass.h  VulkanOffscreenResources.cpp  VulkanOffscreenResources.h
Graphics/Vulkan/PostProcessPass/: VulkanPostRenderPass.cpp  VulkanPostRenderPass.h  VulkanSSAARenderPass.cpp  VulkanSSAARenderPass.h
Graphics/Vulkan/Resources/: RenderTarget.h  VulkanTextureDescriptor.cpp  VulkanTextureDescriptor.h
Graphics/Vulkan/Scene/: VulkanScenePipeline.cpp  VulkanScenePipeline.h  VulkanSceneRenderPass.cpp  VulkanSceneRenderPass.h  VulkanSceneResources.cpp  VulkanSceneResources.h
Graphics/Vulkan/ScenePass/: VulkanSceneResources.cpp  VulkanSceneResources.h
Graphics/Vulkan/Screen/: VulkanScreenRenderPass.cpp  VulkanScreenRenderPass.h
Graphics/Vulkan/Swapchain/: VulkanPostPipeline.cpp  VulkanPostPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSwapchainFramebuffers.cpp  VulkanSwapchainFramebuffers.h  VulkanSwapchainRenderPass.cpp  VulkanSwapchainRenderPass.h
Platform/SDL/: SDLInput.cpp  SDLInput.h
shaders/: bitmap.frag  bitmap.vert  post.frag  post_frag.spv
